[package]
name = "martens_martens_icons"
version = "0.1.2"
authors = ["Antipy V.O.F. <devs@antipy.com>"]
edition = "2018"
default-run = "gui"
description = "A GUI application for viewing images as a font."

[package.metadata.bundle.bin.gui]
name = "demo"
identifier = "com.antipy.demo"
copyright = "demo."
short_description = "demo"

[package.metadata.bundle]
name = "demo"
identifier = "com.antipy.demo"
copyright = "demo."
short_description = "demo"

[dependencies]
image = "0.23.9"

[dev-dependencies]
criterion = "0.3"
cargo-bundle = "0.5.0"

[profile.release]
debug = true
lto = true